# Library-Management-System

./: .gitignore  Dockerfile.frontend  Makefile  README.md  docker-compose-dev-frontend.yml  docker-compose-dev.yml
backend/: .pre-commit-config.yaml  Dockerfile  Dockerfile.frontend  Dockerfile.search  alembic.ini  pyproject.toml  requirements.txt
backend/lms/: broker.py  config.py  database.py  deps.py  main.py
backend/lms/alembic/: env.py
backend/lms/alembic/versions/: 389db06818aa_update_book_author_id.py  a16ffa1732f5_add_book_model_author_model.py  a7fa582fd6fb_revision_books.py  bb36acadbf79_update_book__cover_image.py  cf55aacbed57_update_book의_book_manage_id를_유니크하게_변경.py  d4003c05878a_update_book_relations.py
backend/lms/api/authors/: api.py  model.py
backend/lms/api/books/: api.py  model.py  scrap.py
backend/lms/base/: model.py  storage.py
backend/lms/util/: util.py  utils.py
backend/scripts/: aladin_books.json  docker.py  scrape_books.py
backend/tests/: conftest.py
backend/tests/book/: mock_aladin_page.html  test_broker.py  test_model.py  test_scrap.py  test_scrap_broker_integration.py
frontend/lms/: eslint.config.mjs  next.config.js  package-lock.json  package.json
frontend/lms/src/api/: index.ts
frontend/lms/src/api/core/: OpenAPI.ts
frontend/lms/src/api/models/: AuthorCreate.ts  AuthorResponse.ts  Body_BooksUploadFiles.ts  BookCreate.ts  BookResponse.ts  BookUpdate.ts  ScrapeBookInfoRequest.ts
frontend/lms/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/lms/src/components/: index.ts
libs/: init-db.sh  policy.json
(+8 files in other folders)
