[tool.poetry]
name = "lms"
version = "0.1.0"
description = "Library Management System API"
authors = ["duhwan <e.where.people.enjoy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.15.2"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "scripts.docker:build"
