[tool.poetry]
name = "lms"
version = "0.1.0"
description = "Library Management System API"
authors = ["duhwan <e.where.people.enjoy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
sqlalchemy-utils = "^0.41.2"
alembic = "^1.15.2"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"
nanoid = "^2.0.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
boto3 = "^1.37.25"
pillow = "^11.2.0"
taskiq = "^0.11.16"
taskiq-fastapi = "^0.3.4"
asyncpg = "^0.30.0"
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
asgi-lifespan = "^2.1.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "scripts.docker:build"
